# TNL-HELP

./: .env.example  .gitignore  README.md  demo_script.md  langgraph.json  main.py  pyproject.toml  requirements.txt  validate_config.py
agents/kb/: knowledge_base.json
config/: routing_rules.yaml
docs/: 40_principles.md  AWS Professional.docx  CLAUDE_langgraph.md  Description.txt  Project Overview.md  Python.md  placeholder-skills-by-design.md  prd_25.02.2026.md  python-mcp-llm-quick-memory.md  python-mcp.md
docs/adr/: 001-context-window-ownership.md  002-multi-model-strategy.md  003-anthropic-only-mvp.md  004-file-based-memory.md  005-langgraph-framework-selection.md
memory/: README.md
memory/profiles/: alex.json
prompts/dispatcher/: policy.yaml  v1.yaml  v2.yaml
prompts/followup/: policy.yaml  v1.yaml
prompts/guardrail/: policy.yaml  v1.yaml
prompts/rag_agent/: policy.yaml  v1.yaml
prompts/research_agent/: policy.yaml  v1.yaml
prompts/response_synthesis/: policy.yaml  v1.yaml
spec/: concierge-spec.md
src/concierge/: state.py  trace.py
tests/: conftest.py  test_new_agent_extension.py  test_prompt_versioning.py
tests/e2e/: test_e2e_scenario_2_trend_research.py  test_e2e_scenario_3_booking_intent.py  test_e2e_scenario_4_llm_escalation.py  test_e2e_scenario_5_out_of_domain.py  test_e2e_scenario_6_escalation.py  test_e2e_scenario_7_session_persistence.py  test_e2e_scenario_8_llm_ranking.py  test_e2e_scenario_9_no_api_key.py
tests/integration/: conftest.py
tests/unit/: test_dependencies.py  test_env_hygiene.py  test_gitignore_coverage.py  (+42 more)
(+19 files in other folders)
