[project]
name = "tnl-help"
version = "0.1.0"
description = "LangGraph multi-agent AI Concierge — portfolio demo"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0,<2.0",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "duckduckgo-search>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "langsmith>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src/concierge"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
